test/classes/figueroa/BogusDestructors5.good
BogusDestructors5.chpl:2: error: destructor name must match class/record name or deinit()
